[gd_scene load_steps=7 format=2]

[ext_resource path="res://ui/menus/save_panel/savegame.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/menus/save_panel/save_panel.gd" type="Script" id=2]
[ext_resource path="res://ui/menus/save_panel/autosave.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 1, 1, 1, 1 )

[node name="SavePanel" type="Panel"]
anchor_left = 0.15
anchor_top = 0.15
anchor_right = 0.85
anchor_bottom = 0.85
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AutoSave" type="Button" parent="VBoxContainer"]
margin_right = 876.0
margin_bottom = 118.0
size_flags_vertical = 3
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveName" type="Label" parent="VBoxContainer/AutoSave"]
margin_left = 15.0
margin_top = 15.0
margin_right = 106.0
margin_bottom = 48.0
size_flags_vertical = 0
text = "AutoSave "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Data" type="Label" parent="VBoxContainer/AutoSave"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -127.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = 38.0
grow_horizontal = 0
size_flags_vertical = 0
text = "No Data"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save0" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_top = 122.0
margin_bottom = 240.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )

[node name="Save1" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_top = 244.0
margin_bottom = 362.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
save_number = 1

[node name="Save2" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_top = 366.0
margin_bottom = 484.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
save_number = 2
[connection signal="load_game" from="." to="." method="_on_SavePanel_load_game"]
[connection signal="new_game" from="." to="." method="_on_SavePanel_new_game"]
[connection signal="save_game" from="." to="." method="_on_SavePanel_save_game"]
[connection signal="visibility_changed" from="." to="." method="_on_SavePanel_visibility_changed"]
[connection signal="pressed" from="VBoxContainer/AutoSave" to="." method="_on_save_selected" binds= [ -1 ]]
[connection signal="pressed" from="VBoxContainer/Save0" to="." method="_on_save_selected" binds= [ 0 ]]
[connection signal="pressed" from="VBoxContainer/Save1" to="." method="_on_save_selected" binds= [ 1 ]]
[connection signal="pressed" from="VBoxContainer/Save2" to="." method="_on_save_selected" binds= [ 2 ]]
